crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_herdr_scope_notice_with_status_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..36 Reset Reset BOLD
0 38..49 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..68 Reset Reset DIM
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
4 0..1 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
5 0..1 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
6 0..1 Cyan Reset -
6 27..28 Cyan Reset -
7 0..1 Cyan Reset -
7 27..28 Cyan Reset -
8 0..1 Cyan Reset -
8 27..28 Cyan Reset -
9 0..1 Cyan Reset -
9 27..28 Cyan Reset -
10 0..1 Cyan Reset -
10 27..28 Cyan Reset -
11 0..1 Cyan Reset -
11 27..28 Cyan Reset -
12 0..1 Cyan Reset -
12 27..28 Cyan Reset -
13 0..1 Cyan Reset -
13 27..28 Cyan Reset -
14 0..1 Cyan Reset -
14 27..28 Cyan Reset -
15 0..1 Cyan Reset -
15 27..28 Cyan Reset -
16 0..1 Cyan Reset -
16 27..28 Cyan Reset -
17 0..1 Cyan Reset -
17 27..28 Cyan Reset -
18 0..1 Cyan Reset -
18 27..28 Cyan Reset -
19 0..1 Cyan Reset -
19 27..28 Cyan Reset -
20 0..1 Cyan Reset -
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 27..28 Cyan Reset -
22 0..1 Cyan Reset -
22 27..28 Cyan Reset -
23 0..1 Cyan Reset -
23 27..28 Cyan Reset -
24 0..1 Cyan Reset -
24 27..28 Cyan Reset -
25 0..1 Cyan Reset -
25 27..28 Cyan Reset -
26 0..1 Cyan Reset -
26 27..28 Cyan Reset -
27 0..1 Cyan Reset -
27 27..28 Cyan Reset -
28 0..28 Cyan Reset -
29 20..25 Reset Reset DIM
29 57..100 Reset Reset DIM
