crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_hint_diff_focus_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  standalone  [Accept All]                                                                     watching W"
"┌──────────────────────────┬─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│alpha                     │src/parse.rs  M  +10 −2                                                          [A accept file] [U restore file]│"
"│  main · 3 files          │@@ -16,7 +18,7 @@                                                                 [a accept] [u restore] [m flag]│"
"│  M f1  +1 −1             │     let mut out = Vec::new();                                                                                   │"
"│  M f2  +1 −0             │     for (i, raw) in text.lines().enumerate() {                                                                  │"
"│  M parse.rs  +10 −2      │         let line = raw.trim();                                                                                  │"
"│──────────────────────────│-        if line.is_empty() || line.starts_with('#') {                                                           │"
"│beta                      │+        if line.is_empty() || line.starts_with('#') || line.starts_with("//") {                                 │"
"│  main · 2 files          │             continue;                                                                                           │"
"│  A u1  +1 −0  [upstream] │         }                                                                                                       │"
"│  A u2  +2 −0  [mixed]    │         let Some((key, value)) = line.split_once('=') else {                                                    │"
"│  [upstream] 1 file       │                                                                                                                 │"
"│──────────────────────────│@@ -51,4 +53,10 @@                                                                [a accept] [u restore] [m flag]│"
"│W/notes                   │         assert_eq!(records[0].key, "name");                                                                     │"
"│  draft · 1 file          │         assert_eq!(records[0].line, 3);                                                                         │"
"│  M n2.md  +2 −0          │     }                                                                                                           │"
"│                          │+                                                                                                                │"
"└──────────────────────────┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  ^A accept all  t hide empty  Tab focus  r refresh  v select  y copy  ? help  q quit"
