crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_hint_diff_focus_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..37 Reset Reset BOLD
0 39..49 Reset Reset DIM
1 27..142 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..40 Reset Reset BOLD
2 45..48 Green Reset -
2 49..51 Red Reset -
2 109..141 Reset Reset DIM
2 141..142 Cyan Reset -
3 27..28 Cyan Reset -
3 28..141 Reset Reset REVERSED
3 141..142 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
4 141..142 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
5 141..142 Cyan Reset -
6 1..15 Reset Reset REVERSED
6 15..18 Green Reset REVERSED
6 18..19 Reset Reset REVERSED
6 19..21 Red Reset REVERSED
6 21..27 Reset Reset REVERSED
6 27..28 Cyan Reset -
6 141..142 Cyan Reset -
7 1..27 Reset Reset DIM
7 27..28 Cyan Reset -
7 28..82 Red Reset -
7 141..142 Cyan Reset -
8 1..5 Reset Reset BOLD
8 27..28 Cyan Reset -
8 28..108 Green Reset -
8 141..142 Cyan Reset -
9 27..28 Cyan Reset -
9 141..142 Cyan Reset -
10 9..11 Green Reset -
10 12..14 Red Reset -
10 14..26 Reset Reset DIM
10 27..28 Cyan Reset -
10 141..142 Cyan Reset -
11 9..11 Green Reset -
11 12..14 Red Reset -
11 14..23 Reset Reset DIM
11 27..28 Cyan Reset -
11 141..142 Cyan Reset -
12 27..28 Cyan Reset -
12 141..142 Cyan Reset -
13 1..27 Reset Reset DIM
13 27..46 Cyan Reset -
13 110..141 Reset Reset DIM
13 141..142 Cyan Reset -
14 1..6 Reset Reset BOLD
14 27..28 Cyan Reset -
14 141..142 Cyan Reset -
15 27..28 Cyan Reset -
15 141..142 Cyan Reset -
16 12..14 Green Reset -
16 15..17 Red Reset -
16 27..28 Cyan Reset -
16 141..142 Cyan Reset -
17 27..28 Cyan Reset -
17 28..29 Green Reset -
17 141..142 Cyan Reset -
18 27..142 Cyan Reset -
19 0..142 Reset Reset DIM
