crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_narrow_60x20_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 5 files · 5 hunks             watching W"
"┌──────────────────────────────────────────────────────────┐"
"│f1  M  +1 −1              [A accept file] [U restore file]│"
"│@@ -1,4 +1,4 @@            [a accept] [u restore] [m flag]│"
"│-a1                                                       │"
"│+A1                                                       │"
"│ a2                                                       │"
"│ a3                                                       │"
"│ a4                                                       │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  n/p hunk  a accept hunk  ? help  q quit  "
