crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_narrow_60x20_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..37 Reset Reset BOLD
1 0..60 Cyan Reset -
2 0..1 Cyan Reset -
2 1..3 Reset Reset BOLD
2 8..10 Green Reset -
2 11..13 Red Reset -
2 59..60 Cyan Reset -
3 0..1 Cyan Reset -
3 1..16 Reset Reset REVERSED
3 59..60 Cyan Reset -
4 0..1 Cyan Reset -
4 1..4 Red Reset -
4 59..60 Cyan Reset -
5 0..1 Cyan Reset -
5 1..4 Green Reset -
5 59..60 Cyan Reset -
6 0..1 Cyan Reset -
6 59..60 Cyan Reset -
7 0..1 Cyan Reset -
7 59..60 Cyan Reset -
8 0..1 Cyan Reset -
8 59..60 Cyan Reset -
9 0..1 Cyan Reset -
9 59..60 Cyan Reset -
10 0..1 Cyan Reset -
10 59..60 Cyan Reset -
11 0..1 Cyan Reset -
11 59..60 Cyan Reset -
12 0..1 Cyan Reset -
12 59..60 Cyan Reset -
13 0..1 Cyan Reset -
13 59..60 Cyan Reset -
14 0..1 Cyan Reset -
14 59..60 Cyan Reset -
15 0..1 Cyan Reset -
15 59..60 Cyan Reset -
16 0..1 Cyan Reset -
16 59..60 Cyan Reset -
17 0..1 Cyan Reset -
17 59..60 Cyan Reset -
18 0..60 Cyan Reset -
19 0..60 Reset Reset DIM
