crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_nav_collapsed_binary_and_size_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 7 files · 4 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │img.png  M  +3 −1                      [A accept file] [U restore file]│"
"│  main · 4 files          │collapsed (binary) · +3 −1 · not expandable                            │"
"│  M at_limit.txt ⊟  +1 −1 │                                                                       │"
"│  M img.png ⊟  +3 −1      │                                                                       │"
"│  M over_limit.t… ⊟  +1 −0│                                                                       │"
"│  M under_limit.txt  +1 −1│                                                                       │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  a/A accept file  ^A accept all  z undo  t hide empty  Tab focus  ? help  q quit  "
